<resources>
    <string name="app_name">Tienda App</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <string name="tipoVendedor">Vendedor</string>
    <string name="tipoCliente">Cliente</string>

    <!-- NavigationDrawer vendedor -->
    <string name="op_inicio_v">Inicio</string>
    <string name="op_mitienda_v">Mi tienda</string>
    <string name="op_categorias_v">Categorias</string>
    <string name="op_resenia_v">Reseñas</string>
    <string name="op_cerrar_sesion_v">Cerrar sesion</string>

    <!-- NavigationDrawer cliente -->
    <string name="op_inicio_c">InicioC</string>
    <string name="op_mi_perfil_c">Mi perfil</string>
    <string name="op_cerrar_sesion_c">Cerrar sesion</string>


    <!-- Botton navigation Bar vendedor -->
    <string name="op_mis_productos_v">Mis productos</string>
    <string name="op_mis_pedidos_v">Pedidos</string>

    <!-- Botton navigation Bar cliente -->
    <string name="op_tienda_c">Tienda</string>
    <string name="op_mis_pedidos_c">Mis Pedidos</string>
    <string name="op_favoritos_c">Favoritos</string>


    <string name="txt_bienvenida">Bienvenido</string>

    <!-- Registro de vendedor -->
    <string name="txtRegistroV">Registro Vendedor</string>
    <string name="edtxtNombresV">Nombres completos</string>
    <string name="edtxtEmail">Email</string>
    <string name="edtxtTelefono">Email</string>
    <string name="edtxtPassword">Password</string>
    <string name="edtxtCPassword">Confirmar password</string>
    <string name="btnRegistrarV">Registrarme</string>

    <!-- Registro de clientes -->
    <string name="txtRegistroC">Registro Cliente</string>
    <string name="edtxtNombresC">Nombres completos</string>
    <string name="edtxtTelefonoC">Telefono</string>
    <string name="btnRegistrarC">Registrarme</string>


    <!-- Login de vendedor -->
    <string name="txtLoginV">Login vendedor</string>
    <string name="btnLoginV">Ingresar</string>
    <string name="txtNoCuenta">¿No tienes una cuenta?</string>
    <string name="txtRegistrarV">Registrarme</string>

    <!-- Login de cliente -->
    <string name="txtLoginC">Login cliente</string>
    <string name="btnLoginc">Ingresar</string>
    <string name="txtRegistrarC">Registrarme</string>

    <!-- Productos -->
    <string name="txtAgregarProductos">Agregar productos</string>
    <string name="edtxtNombresP">Nombres del producto</string>
    <string name="edtxtDescripcionP">Descripcion</string>
    <string name="categoria">Categoria</string>
    <string name="edtxtPrecioP">Precio</string>
    <string name="txtDescuento">Descuento</string>
    <string name="edtxtPrecioConDescuentoP">Precio con descuento aplicado</string>
    <string name="edtxtNotaDescuentoP">Ejm: 10% Desc.</string>
    <string name="btnAgregarProducto">Agregar producto</string>

    <!-- Agregar categorias -->
    <string name="txtCategoria">Ingrese categoria</string>
    <string name="btnAgregarCat">Agregar categoria </string>

    <!-- item categorias - v -->
    <string name="item_nombre_c_v">Nombres de categoria</string>

    <!--Item categoria - c-->
    <string name="item_nombre_c_c">Nombre de categoria</string>
    <string name="item_ver_productos">Ver productos</string>

    <!--Item  producto-v-->
    <string name="item_nombre_p">Nombre del producto</string>
    <string name="item_categoria_p">Categoría</string>
    <string name="item_nota_p">50% OFF</string>
    <string name="item_precio_p">00</string>
    <string name="item_precio_p_desc">00</string>

    <string name="bienvenidaTXT">Bienvenido(a)</string>
    <string name="direccionTXT">Mi direccion</string>
    <string name="txtCategorias"></string>

    <!--Perfil del cliente-->
    <string name="txtMiPerfil">Mi perfil</string>
    <string name="nombresCPerfil">Nombres completos</string>
    <string name="emailCPerfil">Email</string>
    <string name="dniCPerfil">Dni</string>
    <string name="telefonoCPerfil">Teléfono</string>
    <string name="ubicacion">Ubicación</string>
    <string name="fechaRegistroCPerfil">Fecha de registro</string>
    <string name="proveedorCPerfil">Proveedor</string>
    <string name="btnGuardarInfoC">Guardar</string>
    <string name="btnActualizarContraseña">Cambiar contraseña</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum"></string>


</resources>