<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:id="@+id/grupo_op"
        android:checkableBehavior="single">

        <!--Hace referencia al inicio-->
        <item
            android:id="@+id/op_inicio_v"
            android:title="@string/op_inicio_v"
            android:icon="@drawable/icono_inicio" />

        <!--Hace referencia a la categorias-->
        <item
            android:id="@+id/op_categorias_v"
            android:title="@string/op_categorias_v"
            android:icon="@drawable/icon_categoria" />

        <!--Hace referencia a mi tienda-->
        <item
            android:id="@+id/op_mitienda_v"
            android:title="@string/op_mitienda_v"
            android:icon="@drawable/icono_mi_tienda"
            />
        <!--Hace referencia a reseñas-->
        <item
            android:id="@+id/op_resenia_v"
            android:title="@string/op_resenia_v"
            android:icon="@drawable/icono_resenias"
            />
    </group>

    <item
        android:id="@+id/op_cerrar_sesion_v"
        android:title="@string/op_cerrar_sesion_v"
        android:icon="@drawable/icono_cerrar_sesion"
        />

</menu>