<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="7dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imagenP"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/item_img_producto"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:scaleType="centerCrop"/>

        <!--Nombre del producto-->
        <TextView
            android:id="@+id/item_nombre_p"
            android:text="@string/item_nombre_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:maxLines="1"/>

        <!--Precio del producto-->
        <TextView
            android:id="@+id/item_precio_p"
            android:text="@string/item_precio_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"/>

        <!--Precio con descuento del producto-->
        <TextView
            android:id="@+id/item_precio_p_desc"
            android:text="@string/item_precio_p_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>